@@ -91,6 +91,8 @@ New in v0.7.06 (2015/12/07)
     error code and modifies commandline.py to add the b2://
     example to the help text.
 * Pep8 corrections for recently released code.
+* Fixed bug #1260666 universally by splitting the
+  filelist for delete before passing to backend.
 
 
 New in v0.7.05 (2015/09/15)
